--- a/resources/scss/components/createcomment.scss
+++ b/resources/scss/components/createcomment.scss
@@ -1,5 +1,6 @@
-.register{
-    height: auto;
+.comment-form{
+    height: 15rem;
+    width: 15rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -10,8 +11,7 @@
     border-radius: 30px;
     padding: 1rem;
     font-weight: 900;
-    .register-form{
-        margin-right: 1rem;
+    margin-right: 1rem;
         input{
             border: solid #62bbd3;
             border-radius: 5px;
@@ -24,12 +24,6 @@
             margin:0.1rem;
             background-color: #80c9dd;
         }
-        select{
-            border: solid #62bbd3;
-            border-radius: 5px;
-            margin:0.1rem; 
-            background-color: #80c9dd;
-        }
         button{
             border: solid #62bbd3;
             border-radius: 5px;
@@ -38,12 +32,5 @@
             background-color: #80c9dd;
             font-weight: 900;  
         }
-    }
-    .register-image{
-        img{
-            height: 40rem;
-            width: 30rem;
-            border-radius: 10px;
-        }
-    }
 }
+    
