--- a/resources/scss/components/createlisting.scss
+++ b/resources/scss/components/createlisting.scss
@@ -1,36 +1,56 @@
-.create-listing-form{
+.create-listing{
     height: auto;
-    width: 20rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    // align-items: center;
     align-content: center;
     background-color: rgba($color: white, $alpha: 0.7);
     border: 5px solid #62bbd3;
     border-radius: 30px;
-    padding: 2rem;
+    padding: 1rem;
     font-weight: 900;
-    input{
-        border: solid #62bbd3;
-        border-radius: 5px;
-        margin:0.1rem;
-        background-color: #80c9dd;
+    .create-listing-form{
+        margin-right: 1rem;
+        margin-top: 3rem;
+        input{
+            border: solid #62bbd3;
+            border-radius: 5px;
+            margin:0.1rem;
+            background-color: #80c9dd;
+        }
+        textarea{
+            border: solid #62bbd3;
+            border-radius: 5px;
+            margin:0.1rem;
+            background-color: #80c9dd;
+        }
+        select{
+            border: solid #62bbd3;
+            border-radius: 5px;
+            margin:0.1rem; 
+            background-color: #80c9dd;
+        }
+        button{
+            border: solid #62bbd3;
+            border-radius: 5px;
+            margin-top:1rem; 
+            font-family: 'Varela Round', sans-serif;
+            background-color: #80c9dd;
+            font-weight: 900;  
+        }
     }
-    textarea{
-        border: solid #62bbd3;
-        border-radius: 5px;
-        margin:0.1rem;
-    }
-    select{
-        border: solid #62bbd3;
-        border-radius: 5px;
-        margin:0.1rem; 
-    }
-    button{
-        border: solid #62bbd3;
-        border-radius: 5px;
-        margin-top:1rem; 
-
+    .create-listing-images{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        height: 40rem;
+        width: 40rem;
+        img{
+            height: 19rem;
+            width: 19rem;
+            border-radius: 10px;
+            margin: 0.5rem;
+        }
     }
 }
