--- a/resources/scss/components/listing.scss
+++ b/resources/scss/components/listing.scss
@@ -1,6 +1,5 @@
 .listing-detail {
-    height: auto;
-    width: 20rem;
+    min-height: 40rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,31 +8,70 @@
     background-color: rgba($color: white, $alpha: 0.7);
     border: 5px solid #62bbd3;
     border-radius: 30px;
-    padding: 2rem;
+    padding: 1rem;
+    font-weight: 900;
+    a {
+        color: black;
+    }
+    .listing-detail__main{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        .listing-detail__left{
+            justify-self: flex-start;
+            margin-right: 1rem;
+        }
+        .listing-detail__right{
+            img{
+                // height: 10rem;
+                width: 10rem;
+                margin: 0.5rem;
+            }
+        }
+    }
     .listing-detail__comment {
-        height: auto;
-        width: 18rem;
+        min-height: 20rem;
+        min-width: 40rem;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
         background-color: rgba($color: white, $alpha: 0.7);
         border: 5px solid #62bbd3;
         border-radius: 30px;
-        padding: 1rem;
-        .comment-detail {
-            height: auto;
-            width: 16em;
+        margin: 1rem;
+        h2{
+            align-self: center;
+            margin: 0.5rem;
+        }
+        a{
+            margin: 0;
+            align-self: center;
+        }
+        .comments-list{
+            height: 18rem;
+            min-width: 40rem;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            align-content: center;
-            background-color: rgba($color: white, $alpha: 0.7);
-            border: 5px solid #62bbd3;
-            border-radius: 30px;
-            padding: 2rem;
+            flex-wrap: wrap;
+            .comment-detail {
+                height: auto;
+                max-width: 16rem;
+                max-height: 5rem;
+                display: flex;
+                flex-direction: column;
+                background-color: rgba($color: white, $alpha: 0.7);
+                border: 5px solid #62bbd3;
+                border-radius: 30px;
+                padding: 0.5rem;
+                margin: 0.5rem;
+            }
         }
+    }
+    button{
+        border: solid #62bbd3;
+        border-radius: 5px;
+        margin-top:1rem; 
+        font-family: 'Varela Round', sans-serif;
+        background-color: #80c9dd;
+        font-weight: 900;  
     }
 }
